# cmakeLearning

./: CMakeLists.txt  README.md  main.cpp
child1_sub/: CMakeLists.txt  Test1.cpp  ver.h.in
child1_sub/include/: Test1.h
child2_sub/: CMakeLists.txt  Test2.cpp
child2_sub/includddde/: Test2.h
